Fix/test to stuck buttons landscape

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -608,7 +608,7 @@ input[type='text'] {
   }
   #buttons.stuck .buttons button.author:nth-of-type(2) {
     width: 19.5vw;
-    left: 16vw;
+    left: 15.5vw;
   }
   #buttons.stuck .buttons button.author:nth-of-type(3) {
     width: 17vw;
